<resources>
    <string name="app_name">Komunikator</string>

    <string name="login_question_text">Masz konto?\nZaloguj się:</string>
    <string name="login_text">Login</string>
    <string name="password_text">Hasło</string>
    <string name="login_button_text">Zaloguj się</string>
    <string name="lack_of_account_text">Nie masz konta?</string>
    <string name="register_text">Zarejestruj się!</string>
    <string name="app_icon">Ikona aplikacji</string>

    <string name="retype_password">Powtórz hasło</string>
    <string name="email">Email</string>
    <string name="accept_rules">Akceptuję regulamin</string>
    <string name="accept_privacy_policy">Akceptuję politykę prywatności</string>

    <string name="title_activity_conversations_list">Rozmowy</string>
    <string name="navigation_drawer_open">Rozwiń menu</string>
    <string name="navigation_drawer_close">Zamknij menu</string>
    <string name="action_settings">Ustawienia</string>
    <string name="search_view_hint">Wyszukaj...</string>
    <string name="navigation_help">Pomoc</string>
    <string name="empty_conversations">Brak rozpoczętych konwersacji...</string>

    <string name="contact_placeholder">Kontakty</string>
    <string name="message_placeholder">Lorem ipsum dolor sit amet enim. Etiam ullamcorper.
        Suspendisse a pellentesque dui, non felis.
        Maecenas malesuada elit lectus felis, malesuada ultricies.</string>
    <string name="contact_email_placeholder">john.doe@example.com</string>
    <string name="title_activity_details">Szczegóły</string>

    <string name="details_bold_name">John Doe</string>
    <string name="details_ignore">IGNORUJ</string>
    <string name="details_add">DODAJ</string>
    <string name="details_name_label">Imię</string>
    <string name="details_surname_label">Nazwisko</string>
    <string name="details_email_label">Email</string>
    <string name="details_birth_label">Data urodzenia</string>
    <string name="details_name"></string>
    <string name="details_surname"></string>
    <string name="details_email"></string>
    <string name="details_birth"></string>

    <string name="title_action_location">Lokalizacja</string>
    <string name="title_action_search">Wyszukiwarka</string>

    <string name="type_message_hint">Wprowadź wiadomość...</string>
    <string name="send_message">Wyślij</string>

    <string name="settings_sound">Dźwięk</string>
    <string name="settings_location">Zgoda na śledzenie lokalizacji</string>
    <string name="settings_notification">Powiadomienia</string>
    <string name="settings_invite">Zgoda na zapraszanie do znajomych</string>
    <string name="settings_archive">Przechowywanie archiwum</string>
    <string name="settings_archive_delete">Usunięcie archiwum</string>
    <string name="settings_archive_delete_button">USUŃ</string>
    <string name="settings_upload_photo">Zmień zdjęcie profilowe</string>
    <string name="settings_upload_photo_button">ZMIEŃ</string>
    <string name="title_settings">Ustawienia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="register_required_field">Pole wymagane</string>
    <string name="register_password_different">Hasła się nie zgadzają</string>
    <string name="register_login_email_used">Login lub adres email już jest używany</string>
    <string name="register_something_goes_wrong">Coś poszło nie tak</string>
    <string name="login_check_username">Sprawdź login</string>
    <string name="login_check_password">Sprawdź hasło</string>
    <string name="please_wait">Proszę czekać</string>
    <string name="navigation_report">Zgłoś błąd</string>
    <string name="no_email_app">Brak aplikacji obsługującej pocztę</string>
    <string name="report_subject">Zgłoszenie błędu</string>
    <string name="company_email">gderacz.komunikator@gmail.com</string>
    <string name="empty_contacts">Lista kontaktów jest pusta. Dodaj znajomych w celu przeprowadzania konwersacji...</string>

    <string name="create_bar_button_text">Utwórz</string>
    <string name="cancel_bar_button_text">Anuluj</string>
    <string name="new_message_error">Błąd podczas wysyłania wiadomości</string>

    <string name="details">Szczegóły</string>
    <string name="pomoc">Pomoc</string>
</resources>
