<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_contacts"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="Kontakty" />
        <item
            android:id="@+id/nav_conversations"
            android:icon="@android:drawable/stat_notify_chat"
            android:title="@string/title_activity_conversations_list" />
        <item
            android:id="@+id/nav_search"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/search_view_hint" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@android:drawable/ic_menu_help"
            android:title="Pomoc" />
    </group>

</menu>
