<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/signup_password_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="125dp"
        android:ems="10"
        android:hint="@string/password_text"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/signup_email_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/signup_retype_password_editText"
        android:layout_alignStart="@+id/signup_retype_password_editText"
        android:layout_below="@+id/signup_retype_password_editText"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/signup_retype_password_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/signup_password_editText"
        android:layout_alignStart="@+id/signup_password_editText"
        android:layout_below="@+id/signup_password_editText"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/retype_password"
        android:inputType="textPersonName" />

    <CheckBox
        android:id="@+id/signup_checkbox_rules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/signup_email_editText"
        android:layout_alignStart="@+id/signup_email_editText"
        android:layout_below="@+id/signup_email_editText"
        android:layout_marginTop="14dp"
        android:text="@string/accept_rules"
        android:textColor="@android:color/holo_blue_light" />

    <CheckBox
        android:id="@+id/signup_checkbox_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/signup_checkbox_rules"
        android:layout_alignStart="@+id/signup_checkbox_rules"
        android:layout_below="@+id/signup_checkbox_rules"
        android:layout_marginTop="14dp"
        android:text="@string/accept_privacy_policy"
        android:textColor="@android:color/holo_blue_light" />

    <EditText
        android:id="@+id/signup_login_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/signup_password_editText"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/signup_password_editText"
        android:layout_marginTop="61dp"
        android:ems="10"
        android:hint="@string/login_text"
        android:inputType="textPersonName"
        android:textSize="18sp" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/signup_checkbox_policy"
        android:layout_alignLeft="@+id/signup_checkbox_policy"
        android:layout_alignRight="@+id/signup_checkbox_policy"
        android:layout_alignStart="@+id/signup_checkbox_policy"
        android:layout_below="@+id/signup_checkbox_policy"
        android:layout_marginTop="12dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/register_text"
        android:textColor="@android:color/white" />

</RelativeLayout>