<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/details_avatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/app_icon"
        android:tint="@color/colorPrimary"
        app:srcCompat="@drawable/ic_user_avatar" />

    <TextView
        android:id="@+id/details_bold_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/details_avatar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:text="@string/details_bold_name"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?attr/buttonBarStyle"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/details_ignore_button"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:background="@android:color/holo_blue_light"
            android:text="@string/details_ignore"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/details_add_button"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_light"
            android:text="@string/details_add"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/details_email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/details_email_label"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/details_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/details_email"
            android:textSize="16sp" />

    </LinearLayout>



</RelativeLayout>
