<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.komunikator.komunikator.fragment.SettingsFragment">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/settings_sound_textView"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:text="@string/settings_sound"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/settings_sound_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/settings_location_textView"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:text="@string/settings_location"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/settings_location_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/settings_notification_textView"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:text="@string/settings_notification"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/settings_notification_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/settings_invite_textView"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:text="@string/settings_invite"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/settings_invite_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/settings_archive_textView"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:text="@string/settings_archive"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/settings_archive_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/settings_archive_delete_textView"
                android:layout_width="247dp"
                android:layout_height="wrap_content"
                android:text="@string/settings_archive_delete"
                android:textSize="18sp" />

            <Button
                android:id="@+id/settings_archive_delete_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/settings_archive_delete_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/settings_upload_photo_textView"
                android:layout_width="247dp"
                android:layout_height="wrap_content"
                android:text="@string/settings_upload_photo"
                android:textSize="18sp" />

            <Button
                android:id="@+id/settings_upload_photo_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/settings_upload_photo_button" />
        </LinearLayout>


    </LinearLayout>
</android.support.constraint.ConstraintLayout>
